--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- // Intro -->
     <header>
-        <img src="your-picture.jpg" alt="Your Name">
+        <img src="images/ProfessionalHeadShot.jpg" alt="Your Name">
         <h1>Your Name</h1>
         <h2>Job title or tagline</h2>
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
