--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -10,7 +10,7 @@
     <!-- // Intro -->
     <header>
         <img height="200" width ="200" src="images/ProfessionalHeadShot.jpg" alt="Your Name">
-        <h1>Your Name</h1>
+        <h1>Yadiel Cabrera</h1>
         <h2>Job title or tagline</h2>
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
     </header>
