--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name | Resume</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans" rel="stylesheet">
 </head>
 <body>
     <!-- // Intro -->
