--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -9,10 +9,13 @@
 <body>
     <!-- // Intro -->
     <header>
+      <div class="content-wrap">
+
         <img height="200" width ="200" src="images/ProfessionalHeadShot.jpg" alt="Your Name">
         <h1>Yadiel Cabrera</h1>
         <h2>Job title or tagline</h2>
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
+    </div> 
     </header>
 
     <main>
