--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -15,12 +15,13 @@
         <h1>Yadiel Cabrera</h1>
         <h2>Job title or tagline</h2>
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
-    </div> 
+    </div>
     </header>
 
     <main>
         <!-- // Work Experience -->
         <section class="work">
+          <div class="content-wrap">
             <h2>Work Experience</h2>
 
             <!-- Job Details: copy this whole block to add more jobs -->
@@ -39,7 +40,7 @@
                 <li>Responsible for</li>
             </ul>
             <!-- end of Job Details block. -->
-
+        </div> 
         </section>
 
 
