--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -40,12 +40,15 @@
                 <li>Responsible for</li>
             </ul>
             <!-- end of Job Details block. -->
-        </div> 
+        </div>
         </section>
 
 
         <!-- // Education -->
         <section class="education">
+          <div class="content-wrap">
+
+
             <h2>Education</h2>
 
             <!-- School details: copy this whole block to add more schools. -->
@@ -55,6 +58,8 @@
             <!-- Add as many paragraphs as you need. -->
             <p>Summary.</p>
             <!-- End of school details. -->
+
+            </div>
         </section>
     </main>
 
