--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -65,6 +65,7 @@
 
     <!-- // Footer & contact info -->
     <footer>
+      <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
@@ -77,6 +78,7 @@
         </div>
 
         <p>Copyright 2017 by Your Name</p>
+        </div>
     </footer>
 </body>
 </html>
