--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -69,7 +69,7 @@
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <div>
+        <div class="contact-info">
             <a href="mailto:email@example.com">email@example.com</a>
             <a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a>
             <a href="#" target="_blank">Twitter</a>
