--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -11,10 +11,12 @@
     <header>
       <div class="content-wrap">
 
-        <img class ="profile-img" height="300" width ="300" src="images/ProfessionalHeadShot.jpg" alt="Your Name">
+        <img class ="profile-img col-narrow" height="300" width ="300" src="images/ProfessionalHeadShot.jpg" alt="Your Name">
+        <div class =" col-wide">
         <h1>Yadiel Cabrera</h1>
         <h2>Job title or tagline</h2>
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
+    </div>
     </div>
     </header>
 
