--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -27,9 +27,15 @@
             <h2>Work Experience</h2>
 
             <!-- Job Details: copy this whole block to add more jobs -->
+            <div class="col-narrow">
             <h3>Job title</h3>
             <p>Company Name</p>
             <p>Date at job</p>
+          </div>
+          <div class="col-wide">
+
+
+
 
             <!-- Add as many paragraphs as you need. -->
             <p>Job summary.</p>
@@ -41,6 +47,7 @@
                 <li>Lead...</li>
                 <li>Responsible for</li>
             </ul>
+          </div>
             <!-- end of Job Details block. -->
         </div>
         </section>
