--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -9,6 +9,12 @@
 <body>
     <!-- // Intro -->
     <header>
+      <nav>
+      <a href ="#about">About</a>
+      <a href ="#work">Work Experience</a>
+      <a href ="#education">Education</a>
+      <a href ="#contact">Contact</a> 
+      </nav>
       <div class="content-wrap">
 
         <img class ="profile-img col-narrow" height="300" width ="300" src="images/ProfessionalHeadShot.jpg" alt="Your Name">
@@ -29,14 +35,10 @@
             <!-- Job Details: copy this whole block to add more jobs -->
             <div class="col-narrow">
             <h3>Job title</h3>
-            <p>Company Name</p>
+            <p class="uppercase">Company Name</p>
             <p>Date at job</p>
           </div>
-          <div class="col-wide">
-
-
-
-
+          <div class="col-wide job-description">
             <!-- Add as many paragraphs as you need. -->
             <p>Job summary.</p>
 
