--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -13,7 +13,7 @@
       <a href ="#about">About</a>
       <a href ="#work">Work Experience</a>
       <a href ="#education">Education</a>
-      <a href ="#contact">Contact</a> 
+      <a href ="#contact">Contact</a>
       </nav>
       <div class="content-wrap">
 
@@ -28,7 +28,7 @@
 
     <main>
         <!-- // Work Experience -->
-        <section class="work">
+        <section id="work" class="work">
           <div class="content-wrap">
             <h2>Work Experience</h2>
 
@@ -56,7 +56,7 @@
 
 
         <!-- // Education -->
-        <section class="education">
+        <section id ="education" class="education">
           <div class="content-wrap">
 
 
@@ -75,7 +75,7 @@
     </main>
 
     <!-- // Footer & contact info -->
-    <footer>
+    <footer id="contact">
       <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
