--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -24,6 +24,7 @@
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
     </div>
     </div>
+    <a href="resume.pdf" class="btn" download>Download PDF</a> 
     </header>
 
     <main>
