--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name | Resume</title>
     <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
+
 <body>
     <!-- // Intro -->
     <header>
@@ -24,7 +26,7 @@
         <p>Add your profile summary here. You can have several paragraphs or add links.</p>
     </div>
     </div>
-    <a href="resume.pdf" class="btn download" download>Download PDF</a> 
+    <a href="resume.pdf" class="btn download" download>Download PDF</a>
     </header>
 
     <main>
