--- a/css-resume/index.html
+++ b/css-resume/index.html
@@ -86,7 +86,8 @@
         <div class="contact-info">
             <a href="mailto:email@example.com">email@example.com</a>
             <a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a>
-            <a href="#" target="_blank">Twitter</a>
+            <a href="#" ><i class="fab fa-twitter" aria-hidden="true"></i>
+            <span class="sr-only">Twitter</span></a>
             <a href="#" target="_blank">LinkedIn</a>
             <a href="#" target="_blank">Facebook</a>
         </div>
